--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -33,18 +33,26 @@
 			<div class="statistics-row">
 				<div class="statistics-col" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
 					<div class="statistics-ico" id="statistics1"></div>
+					<div class="statistics-hidden" id="statistics1-1">1</div>
+					<div class="statistics-hidden" id="procent-1">0.75</div>
 					<span class="statistics-subtitle">Успешной <br>работы</span>
 				</div>
 				<div class="statistics-col" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
 					<div class="statistics-ico" id="statistics2"></div>
+					<div class="statistics-hidden" id="statistics2-2">200</div>
+					<div class="statistics-hidden" id="procent-2">0.75</div>
 					<span class="statistics-subtitle">Довольных <br>клиентов</span>
 				</div>
 				<div class="statistics-col" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
 					<div class="statistics-ico" id="statistics3"></div>
+					<div class="statistics-hidden" id="statistics3-3">21818180</div>
+					<div class="statistics-hidden" id="procent-3">0.75</div>
 					<span class="statistics-subtitle">Кэшбэка <br>выплачено</span>
 				</div>
 				<div class="statistics-col" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
 					<div class="statistics-ico" id="statistics4"></div>
+					<div class="statistics-hidden" id="statistics4-4">100</div>
+					<div class="statistics-hidden" id="procent-4">0.75</div>
 					<span class="statistics-subtitle">Самый большой процент кэшбэка</span>
 				</div>
 			</div>
