--- a/templates/basic.html
+++ b/templates/basic.html
@@ -15,10 +15,14 @@
     <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">-->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="{% static 'css/main.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/notifi.css' %}">
     <meta name="theme-color" content="#000">
     <meta name="msapplication-navbutton-color" content="#000">
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
     <style>
+        .statistics-hidden{
+            display: none;
+        }
         #team_input:disabled{
             opacity: .8;
             cursor: not-allowed;
@@ -102,7 +106,8 @@
             font-size: 16px;
             font-weight: 600;
             color: #1b1b1b;
-                }
+        }
+        .header{z-index: 90 !important;}
     </style>
 </head>
 <body>
@@ -121,9 +126,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="{% static 'js/scripts.min.js' %}"></script>
+    <script src="{% static 'js/notifi.min.js' %}"></script>
 
 
     <script>
+        {% if messages %}
+                    {% for message in messages %}
+                             var content ='{{ message }}';
+                            $.notifi(content);
+                    {% endfor %}
+        {% endif %}
+
+
         let email_login = document.getElementById('email_login'),
             password_login = document.getElementById('password_login'),
             login_form_error = document.getElementById('login_form_error'),
