--- a/templates/basic.html
+++ b/templates/basic.html
@@ -108,6 +108,9 @@
             color: #1b1b1b;
         }
         .header{z-index: 90 !important;}
+        .not-visible{
+            display: none !important;
+        }
     </style>
 </head>
 <body>
