--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -52,8 +52,8 @@
 				<div class="statistics-col" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
 					<div class="statistics-ico" id="statistics4"></div>
 					<div class="statistics-hidden" id="statistics4-4">100</div>
-					<div class="statistics-hidden" id="procent-4">0.75</div>
-					<span class="statistics-subtitle">Самый большой процент кэшбэка</span>
+					<div class="statistics-hidden" id="procent-4">0.50</div>
+					<span class="statistics-subtitle">Большой процент кэшбэка</span>
 				</div>
 			</div>
 		</div>
@@ -130,7 +130,7 @@
 			</div>
 			<div class="attention-info">
 				<h2 class="attention-title">Получайте бесконечные кэшбеки</h2>
-				<p>Мы возвращаем тебе 50% от каждого проигрыша вне зависимости от количества и суммы твоих выигрышей</p>
+				<p>Мы возвращаем тебе до 50% от каждого проигрыша вне зависимости от количества и суммы твоих выигрышей</p>
 				<a href="#" class="main-btn">Регистрация</a>
 			</div>
 		</div>
