--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -95,7 +95,7 @@
 							<div class="contacts-ico">
 								<img src="{% static 'img/contacts-ico-1.svg' %}" alt="">
 							</div>
-							<span class="contacts-title">hello@email.com</span>
+							<span class="contacts-title">support@ugscash.ru</span>
 							<p>Эмеил</p>
 						</div>
 						<div class="contacts-block" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
