js fix, add admin pages

--- a/templates/header_profile.html
+++ b/templates/header_profile.html
@@ -23,11 +23,13 @@
 					<div class="header-bell">
 						<div class="header-bell__top">
 							<svg width="22" height="24" viewBox="0 0 22 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M21.2194 17.3316L21.2192 17.3314C21.1633 17.2741 21.1032 17.2139 21.0396 17.1501C20.5824 16.692 19.9454 16.0538 19.4154 15.0292C18.8093 13.8579 18.3532 12.2112 18.3532 9.75C18.3532 6.37492 15.8756 3.64199 12.4732 2.96733L12.0705 2.88747V2.47688V1.5C12.0705 0.969228 11.613 0.5 11 0.5C10.3871 0.5 9.92959 0.969228 9.92959 1.5V2.47688V2.88747L9.52684 2.96733C6.12443 3.64199 3.64682 6.37492 3.64682 9.75C3.64682 12.2112 3.19072 13.8579 2.5847 15.0292C2.05462 16.0538 1.4177 16.692 0.960419 17.1501C0.896863 17.2138 0.836777 17.274 0.780931 17.3313C0.578706 17.5388 0.498485 17.7733 0.500022 17.9965L21.2194 17.3316ZM21.2194 17.3316C21.4212 17.5384 21.5016 17.7731 21.5 17.9965L21.5 17.9968M21.2194 17.3316L21.5 17.9968M21.5 17.9968C21.4968 18.4984 21.08 19 20.4237 19H1.57637C0.920347 19 0.503574 18.4987 0.500022 17.9965L21.5 17.9968ZM13.5881 21.5C13.3447 22.6279 12.2945 23.5 11 23.5C9.70561 23.5 8.65532 22.6279 8.41192 21.5H13.5881Z" fill="#F8F8F8" stroke="#F99422"/></svg>
-							<b>{{ request.user.get_messages.count }}</b>
+							{% if msgCount > 0 %}
+                            <b id="msgCount">{{ msgCount }}</b>
+                            {% endif %}
 						</div>
 						<div class="header-bell__drop">
 							<div class="header-bell__drop-wrap">
-                                {% for msg in request.user.get_messages %}
+                                {% for msg in allMessages %}
 								<p>{{ msg.text }}</p>
                                 {% endfor %}
 						</div>
