js fix, add admin pages

--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -96,7 +96,7 @@
 								<img src="{% static 'img/contacts-ico-1.svg' %}" alt="">
 							</div>
 							<span class="contacts-title">support@ugscash.ru</span>
-							<p>Эмеил</p>
+							<p>E-Mail</p>
 						</div>
 						<div class="contacts-block" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
 							<div class="contacts-ico">
@@ -109,8 +109,8 @@
 							<div class="contacts-ico">
 								<img src="{% static 'img/contacts-ico-3.svg' %}" alt="">
 							</div>
-							<span class="contacts-title">Main Street 32b, NYC</span>
-							<p>Адресс</p>
+							<span class="contacts-title">Москва, Новодмитровская улица, 2к1</span>
+							<p>Адрес</p>
 						</div>
 					</div>
 				</div>
