--- a/templates/user/sidebar.html
+++ b/templates/user/sidebar.html
@@ -5,16 +5,12 @@
 
         <div class="sidebar-menu">
             <ul>
-                <li><a href="{% url 'cp_users' %}" class="{{ profile_index }}">Пользователи
-                </a></li>
-                <li><a href="{% url 'cp_bets' %}" class="{{ profile_edit }}">Ставки
-                </a></li>
-                <li><a href="{% url 'cp_withdraws' %}" class="{{ profile_finance }}">Запросы на вывод
-                </a></li>
-                <li><a href="{% url 'cp_payments' %}" class="{{ profile_balance }}">Платежи
-                </a></li>
-                <li><a href="{% url 'cp_messages' %}">Сообщения
-                            </a></li>
+                <li><a href="{% url 'cp_users' %}" class="{{ profile_index }}">Пользователи</a></li>
+                <li><a href="{% url 'cp_bets' %}" class="{{ profile_edit }}">Ставки</a></li>
+                <li><a href="{% url 'cp_withdraws' %}" class="{{ profile_finance }}">Запросы на вывод</a></li>
+                <li><a href="{% url 'cp_payments' %}" class="{{ profile_balance }}">Платежи</a></li>
+                <li><a href="{% url 'cp_messages' %}">Сообщения</a></li>
+                <li><a href="{% url 'cp_feedbacks' %}">Отзывы</a></li>
                    <li><a href="{% url 'logout_page' %}">Выход
                 </a></li>
             </ul>
